_includes/academy.css
/* ... */
.qa label:before {
    content: "";
    display: inline-block;
    padding: .4em;
    margin: .2em 0 .2em .5em;
    vertical-align: middle;
    background-color: #fff;
    border: .2em solid #f58e84;
    border-radius: 2px;
}
.qa ol ol label {
    padding-right: 2.85em;
}
.qa ol li:last-child label {
    border-bottom: 0;
}
.qa ol ol li:not(:last-child) label {
    border-color: #eee;
}
.qa label:not([disabled]):hover {
    background-color: #fff;
}
.qa label:not([disabled]):hover:before {
    border-color: #1e90ff;
}
.qa label[disabled] {
    opacity: .4;
    pointer-events: none;
}
.qa label[disabled]:before {
    background-color: transparent;
    border-color: #ccc;
}
.qa input:checked ~ label {
    font-weight: bold;
    background-color: #fff;
    border-color: transparent;
    box-shadow: 0 -1px 0 #eee,
                1px 2px 1px #aaa;
}
.qa input:checked ~ label:before {
    background-color: #1e90ff;
    border-color: #1e90ff;
}
.qa input:checked ~ label:after {
    content: "\2716";
    position: absolute;
    top: 1.65em;
    right: 2.15em;
    color: transparent;
    font-weight: normal;
    font-size: 86%;
    transition: color .35s cubic-bezier(.2,1,.4,1);
}
.qa input:checked ~ label:hover,
.qa ol ol label:not([disabled]):hover {
    background-color: #f8f8f9;
}
.qa input:checked ~ label:hover:after {
    color: #fff;
    transition: color .15s cubic-bezier(.2,1,.4,1);
}
.dialog {
    position: relative;
    z-index: 1;
    height: 15em;
    padding: 1em;
    text-align: center;
    background-color: #fff;
    border-radius: 3px;
    box-shadow: 0 -1px 0 #eee, 1px 2px 2px #aaa;
}
.dialog.final {
    background-color: transparent;
    box-shadow: none;
}
.dialog.dialog.dialog ~ * {
    display: none;
}
.dialog .table {
    height: 100%;
}
.dialog .cel {
    display: table-cell;
    vertical-align: middle;
}
.dialog .close {
    position: absolute;
    left: 0;
    top: 0;
    width: 1.6em;
    height: 1.6em;
    font-size: 170%;
    line-height: 1.6;
    cursor: pointer;
}
.dialog .close:before {
    content: "\01F7A9";
}
.dialog h1 {
    color: inherit;
    font-size: 1.7em;
}
.dialog .button {
    display: inline-block;
    visibility: visible;
    width: auto;
    margin: .6em auto 1.2em;
    float: none;
    color: #fff;
    text-shadow: none;
    box-shadow: none;
}
.dialog.final .button {
    margin-right: .2em;
    margin-left: .2em;
}
.calculator .sheet {
    margin: 0;
}
.calculator .row {
    display: table-row-group;
}
.calculator .column {
    display: table-cell;
    padding: .4em;
}
.calculator .label {
    font-weight: bold;
    white-space: nowrap;
}
.calculator input {
    direction: ltr;
    width: 5em;
    text-align: left;
}
.calculator button {
    width: 12em;
    margin-top: .55em;
}

.sat form {
    overflow: hidden;
}
.sat h4 {
    font-size: 130%;
    margin-bottom: 0;
}
.sat i {
    margin: .2em;
}
.sat .wrap {
    white-space: normal;
}
.sat.sat input:checked ~ label {
    z-index: 1;
    background-color: #fff;
    box-shadow: 0 -1px 0 #eee, 0 2px 0 #aaa;
}
.sat .label,
.sat .label[disabled][disabled] {
    border-color: #ddd;
}
.sat .wrapper {
    display: inline-block;
    width: 100%;
    padding: 0;
    margin: 0;
    white-space: nowrap;
    transition: transform .35s cubic-bezier(.2,1,.4,1);
    -webkit-transform: translateZ(0); /* Android 4.4.4 legacy */
        -ms-transform: translateZ(0); /* IE9 legacy */
            transform: translateX(0);
}
.sat .qa {
    display: inline-block;
    width: 100%;
    padding: 0;
    margin: 1em 0;
    vertical-align: top;
}
.sat .box .row {
    display: block;
    width: 100%;
    padding: 0;
    white-space: normal;
    box-sizing: border-box;
}
.sat .next {
        width: auto;
    min-width: 7em;
    height: auto;
    padding: .8em 1.2em;
    margin: 0;
    color: #fff;
    text-shadow: -1px -1px #000;
    background-color: #1e90ff;
    border-radius: 4px;
    box-shadow: none;
    outline: none;
}
.sat .back {
    display: inline-block;
    margin: .8em 1.2em;
    color: #aaa;
    font-weight: bold;
    cursor: pointer;
}
.sat .next.spin.spin.spin:before {
    margin-top: 0;
    margin-right: .5em;
    margin-left: -.1em;
}

@keyframes shake {
    0%, 100% {
        transform: translateX(0);
    }
    10% {
        transform: translateX(-9px);
    }
    20% {
        transform: translateX(8px);
    }
    30% {
        transform: translateX(-7px);
    }
    40% {
        transform: translateX(6px);
    }
    50% {
        transform: translateX(-5px);
    }
    60% {
        transform: translateX(4px);
    }
    70% {
        transform: translateX(-3px);
    }
    80% {
        transform: translateX(2px);
    }
    90% {
        transform: translateX(-1px);
    }
}

button[disabled] {
    animation-name: shake;
    animation-duration: .5s;
    animation-timing-function: ease-out;
    animation-fill-mode: both;
}
button[disabled].spin,
button[disabled]:not(:hover) {
    animation-name: none;
}
/* ... */

